Remove horizontal scroll bar issue

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #191919;
     font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, sans-serif;
     color: #d4d4d4;
-    width: 100%;
+    width: auto;
     height: 100%;
 }
 
